--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fetchai-ledger-api",
-  "version": "0.1.0-rc1",
+  "version": "0.1.0",
   "description": "Fetch.AI Ledger Javascript API",
   "main": "./dist/fetchai/ledger/index.js",
   "source": "src/ledger/index.js",
